sync: java-upgrade plugin update from devdiv-azure-service-dmitryr/azure-java-migration-copilot-vscode-extension@cc075ee
Source commit: cc075ee3b03e33a11b4ae1dd0a4cc82a3cfbbe9e

Source branch: main

Triggered by: haital_microsoft

Workflow: https://github.com/devdiv-azure-service-dmitryr/azure-java-migration-copilot-vscode-extension/actions/runs/26072801103